# amdgpuinfo

./: amdgpuinfo.c  meson.build
